feat: subindo rota de settings
